# master_data_analytics

./: .gitignore  404.html  DEPLOYMENT_QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_RECOMMENDATIONS.md  docker-compose.prod.yml  gen_dashboard.py  index.html  output.txt  package-enhanced.json  package-lock.json  package.json  prometheus.yml  terraform-gcp-main.tf
my-data-platform/backend/: .dockerignore  .env  .env.sample  Dockerfile  README.md  activity_tracker.py  advanced_cleaner.py  ai_engine.py  analytics_engine.py  anomaly_detector.py  auth.py  auth.sqlite3  catalog.py  conftest.py  connectors.py  dashboard_summary.py  data_quality.py  database.py  db.py  email_templates.py  executive_summary.py  feature_engineer.py  healthcheck.py  hypothesis_tester.py  identifier.py  main.py  metrics.py  ml_advanced.py  ml_engine.py  ml_registry.py  models.py  observability.py  pdf_generator.py  pipeline_routes.py  privacy.py  pyproject.toml  report_generator.py  requirements-ml.txt  requirements.txt  scheduled_exports.py  (+14 more)
my-data-platform/backend/ai/: __init__.py
my-data-platform/backend/api/: models.py
my-data-platform/backend/automl/: __init__.py
my-data-platform/backend/cleaning/: __init__.py
my-data-platform/backend/copilot/: engine.py  models.py  routes.py
my-data-platform/backend/data/: activity_log.json  catalog.json  workflows.json
my-data-platform/backend/dataset_engine/: __init__.py  engine.py
my-data-platform/backend/export/: __init__.py
my-data-platform/backend/feature_engineering/: __init__.py
my-data-platform/backend/plugins/: __init__.py
(+223 files in other folders)
