[project]
name = "data-platform-backend"
version = "0.2.0"
description = "Production-grade big data analytics backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.3",
    "polars==1.26.0",
    "fpdf2==2.7.8",
    "python-multipart==0.0.18",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "passlib[bcrypt]==1.7.4",
    "pyjwt==2.9.0",
    "requests==2.32.3",
    "celery==5.4.0",
    "redis==5.2.0",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
    "pyarrow==19.0.0",
    "xlrd==2.0.2",
]

[project.optional-dependencies]
ml = [
    "pycaret==3.3.0",
    "openai==1.57.0",
    "transformers==4.47.0",
    "torch==2.6.0",
    "shap==0.46.0",
]
test = [
    "pytest==8.3.0",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
